--- a/angular.json
+++ b/angular.json
@@ -32,10 +32,13 @@
             "styles": [
               "src/styles.css",
               "./node_modules/leaflet/dist/leaflet.css",
+              "node_modules/ng-devui/devui.min.css",
               "node_modules/bootstrap/scss/bootstrap.scss",
               "node_modules/bootstrap-icons/font/bootstrap-icons.css"
             ],
             "scripts": [
+              "node_modules/leaflet/dist/leaflet.js",
+
               "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
             ]
           },
