--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/router": "^17.3.0",
     "@asymmetrik/ngx-leaflet": "^17.0.0",
+    "@types/leaflet.gridlayer.googlemutant": "^0.4.9",
     "leaflet": "^1.9.4",
+    "leaflet.gridlayer.googlemutant": "^0.14.1",
+    "ng-devui": "^17.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
