--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@asymmetrik/ngx-leaflet": "^17.0.0",
     "@types/leaflet.gridlayer.googlemutant": "^0.4.9",
     "leaflet": "^1.9.4",
+    "leaflet-easybutton": "^2.4.0",
     "leaflet.gridlayer.googlemutant": "^0.14.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
@@ -36,6 +37,7 @@
     "bootstrap-icons": "^1.11.3",
     "esri-leaflet": "^3.0.12",
     "express": "^4.19.2",
+    "georaster-layer-for-leaflet": "^3.10.0",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
